<resources>
    <string name="app_name">b.fast(Utente)</string>
    <string name="password_dimenticata"> <u>Password dimenticata</u> </string>
    <string name="bfast">BFast</string>
    <string name="button">Sign In</string>
    <string name="devi_registrati"><u>Devi registrati</u></string>
    <string name="todo">TODO</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="conferma_password">Conferma Password</string>
    <string name="nome">Nome</string>
    <string name="cognome">Cognome</string>
    <string name="data_di_nascita">Data di nascita</string>
</resources>
